# sems-modules-g729-bcg

./: .gitignore  CMakeLists.txt  README.md  g729.c  g729.cpp
.github/workflows/: build.yml  release.yml
cmake/: FindBCG729.cmake
debian/: changelog  control  rules
